feat(78): Adds new feel engine, adds dmn test suit, adds small reworks and fixes to dmn engine and bpmn engine
1. Adds transcribed feel engine in JS - github.com/nikku/feelin
Its running on golang js interpeter - github.com/dop251/goja
2. Fixes inputs and outputs in DMN engine
3. Fixes output from Business Rule Task
4. Changes how required dependencies of decisions are outputed and linked. Each dependency output can be accessed by its decision_id. example: decision2.resultVariable
5. Added support for literal expressions
6. Added checks for result output type for literal expressions
7. Added a check for required input variables
8. Fixed bug in server.go mapping when evaluating decisions
9. Added DMN compatibility test suit
10. Fixed various issues in dmn engine that were found in tests
11. Fixed old tests to represent the changes
12. There was an issues with goja and feel interpeter where goja would crash after 10+ minutes of usage. Temporary fix for now that seems to work is to create new instance of goja every few minutes.
Atomic pointers were used for stability.
13. Fixed open api response
14. Improved compatibility between OS in e2e tests
